# unifi-rtsp-converter

./: .gitignore  AGENTS.md  Cargo.toml  DEBT.md  PROJECT.md  README.md  TODO.md  flvproxy.ini.example  rustfmt.toml
.cargo/: config.toml
plan/: 00-README.md  00-scaffolding.md  01-flv-resync-extflv.md  01-logging-and-config.md  02-flv-prefix-and-header.md  02-onvif-stub-ops.md  03-flv-tag-state-machine.md  03-multicast-egress-ffi.md  04-avc-config-and-nalus.md  04-camera-identity-serial.md  05-extended-video-tags.md  05-self-signed-cert-generation.md  06-script-metadata.md  06-service-account.md  06r-parser-cluster-review.md  07-parser-cluster-review.md  07-plan-reference-sweep.md  07-service-autostart.md  07-stream-state.md  08-finalize-delete-debt.md  08-rtp-packetization.md  08-stream-state.md  08-uac-elevation-on-install.md  09-plan-reference-sweep.md  09-rtp-packetization.md  09-sdp-generation.md  10-finalize-delete-debt.md  10-rtsp-protocol.md  10-sdp-generation.md  11-rtsp-protocol.md  11-rtsp-server.md  11r-rtsp-cluster-review.md  12-rtsp-server.md  12-tcp-listener-and-flv-pipeline.md  13-end-to-end-rtsp.md  13-rtsp-cluster-review.md  14-onvif-soap.md  14-tcp-listener-and-flv-pipeline.md  15-end-to-end-rtsp.md  15-onvif-wsdiscovery.md  (+31 more)
src/: accept_loop.rs  active_slot.rs  amf.rs  app.rs  avc.rs  base64.rs  calendar.rs  camera_identity.rs  camera_listener.rs  cert_gen.rs  cli.rs  config.rs  defaults.rs  elevate.rs  flv_parser.rs  flv_video.rs  json.rs  lib.rs  logging.rs  main.rs  onvif_discovery.rs  onvif_responses.rs  onvif_server.rs  protect_controller.rs  protect_listener.rs  protect_recon_impl.rs  rtp.rs  rtsp_protocol.rs  rtsp_pump.rs  rtsp_server.rs  sdp.rs  server_stops.rs  service.rs  stream_state.rs  tls_schannel.rs  wide.rs  ws.rs  xml.rs
tests/: amf.rs  avc.rs  base64.rs  camera_pipeline.rs  config.rs  flv_prefix_header.rs  flv_tag_sm.rs  logging.rs  rtp.rs  (+15 more)
(+2 files in other folders)
