[package]
name = "flvproxy"
version = "0.1.0"
edition = "2021"
description = "UniFi Camera FLV-to-RTSP/ONVIF proxy Windows service"

[[bin]]
name = "flvproxy"
path = "src/main.rs"

# Throwaway, Windows-only recon capture tool (step 16). Listens for inbound
# TLS WebSocket connections on the Protect AVClient (7442) and optional uPFLV
# (7550) ports and hex-dumps every inbound frame so the operator can capture
# the real first-byte shape of the camera's Protect handshake. Removed (or
# moved under `tools/`) once step 20 confirms the real path works.
[[bin]]
name = "protect_recon"
path = "src/bin/protect_recon.rs"

[profile.release]
panic = "abort"

# Windows-only TLS via the OS SChannel SSPI, used solely by the step-16
# `protect_recon` capture tool (and, in steps 17–20, the Protect controller
# emulation). Vendored under a `cfg(windows)` target gate so Linux dev/CI
# builds stay zero-crates and `cargo test` runs without a Windows host.
[target.'cfg(windows)'.dependencies]
schannel = "0.1"
